--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -1,1 +1,108 @@
-<p>accounts works!</p>
+<div class="container mt-2">
+    <div class="row">
+        <div class="col col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    Accounts
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="accountFormGroup" (ngSubmit)="handleSearchAccount()" class="mb-3">
+                    <div class="input-group">
+                        <label class="input-group-text">Account Id : </label>
+                        <input type="text" formControlName="accountId" class="form-control">
+                        <button type="submit" class="btn btn-info" ><i class="bi bi-search"></i>
+                        Search
+                        </button>
+                    </div>
+                    </form>
+                    <ng-template #errorTemplate>
+                        <ng-container *ngIf="errorMessage">
+                            <div class="text-danger">{{errorMessage}}</div>
+                        </ng-container>
+                        
+                    </ng-template>
+                    <ng-container *ngIf="accountObservable|async as accountDetails;else errorTemplate">
+                    <div class="mb-2">
+                    <label>Account ID :</label>
+                    <label><strong>{{accountDetails.accountId}}</strong></label>
+                    </div>
+                    <div class="mb-2">
+                        <label>Balance :</label>
+                        <label><strong>{{accountDetails.balance | number : '1.2-2'}}</strong></label>
+                        </div>
+                        <table class="table">
+                            <thead>
+                                <th>Id</th>
+                                <th>Date</th>
+                                <th>Type</th>
+                                <th>Amount</th>
+                                
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let op of accountDetails.accountOperationDTOS">
+                                    <td>{{op.id}}</td>
+                                    <td>{{op.operationDate | date :'dd-mm-yyyy:HH-MM-SS'}}</td>
+                                    <td>{{op.type}}</td>
+                                    <td>{{op.amount | number : '1.2-2'}} dhs</td>
+                                    
+                                </tr>
+                                
+                            </tbody>
+                            <ul class="nav nav-pills">
+                                <li *ngFor="let item of [].constructor(accountDetails.totalPages);let page=index">
+                                  <a [ngClass]="page==currentPage?'btn-info':'btn-outline-info'" (click)="gotoPage(page)" class="btn  ms-1 mt-1">{{page}}</a>
+                                </li>
+                              </ul>
+                        </table>
+                    </ng-container>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="col col-md-6">
+            <div class="card" *ngIf="accountObservable">
+                <div class="card-header">
+                    Opérations 
+                </div>
+                <div class="card-body">
+                    
+                    <form [formGroup]="operationFormGroup" method="post" (ngSubmit)="handleAccountOperation()">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" formControlName="operationType" value="DEBIT" id="debit">
+                            <label class="form-check-label" for="debit">DEBIT :</label>
+                           
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" formControlName="operationType" value="CREDIT" id="credit">
+                            <label class="form-check-label" for="credit">CREDIT :</label>
+                           
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" formControlName="operationType" value="TRANSFER" id="transfer">
+                            <label class="form-check-label" for="transfer">TRANSFER :</label>
+                        </div>
+                        <div class="mb-3" *ngIf="operationFormGroup.value.operationType=='TRANSFER'">
+                            <label class="form-label">Account destination :</label>
+                            <input type="text" formControlName="accountDestination" class="form-control">
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label class="form-label">Amount :</label>
+                            <input type="text" formControlName="amount" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Description :</label>
+                            <input type="text" formControlName="description" class="form-control">
+                        </div>
+                        <div class="d-grid mb-3">
+                            <button class="btn btn-success">Save Operation</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
+   
+
+</div>
